; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_generic.c_get_agp_version.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_generic.c_get_agp_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agp_bridge_data = type { i32, i32, i32, i32 }

@AGP_MAJOR_VERSION_SHIFT = common dso_local global i32 0, align 4
@AGP_MINOR_VERSION_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @get_agp_version(%struct.agp_bridge_data* %0) #0 {
  %2 = alloca %struct.agp_bridge_data*, align 8
  %3 = alloca i32, align 4
  store %struct.agp_bridge_data* %0, %struct.agp_bridge_data** %2, align 8
  %4 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %5 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %29

9:                                                ; preds = %1
  %10 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %11 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %10, i32 0, i32 3
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %14 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @pci_read_config_dword(i32 %12, i32 %15, i32* %3)
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @AGP_MAJOR_VERSION_SHIFT, align 4
  %19 = ashr i32 %17, %18
  %20 = and i32 %19, 15
  %21 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %22 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* @AGP_MINOR_VERSION_SHIFT, align 4
  %25 = ashr i32 %23, %24
  %26 = and i32 %25, 15
  %27 = load %struct.agp_bridge_data*, %struct.agp_bridge_data** %2, align 8
  %28 = getelementptr inbounds %struct.agp_bridge_data, %struct.agp_bridge_data* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @pci_read_config_dword(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
